# oneocr-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
benches/: benchmark.rs
examples/: bbox_draw.rs  ocr.rs  ocr_advance.rs  ocr_simple.rs
src/: bounding_box.rs  errors.rs  ffi.rs  image.rs  image_input.rs  lib.rs  ocr_engine.rs  ocr_line.rs  ocr_options.rs  ocr_result.rs  ocr_word.rs
