[package]
name = "oneocr-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust binding for OneOCR, an embedded OCR engine in Windows 11 Snipping Tool."
license = "MIT"
repository = "https://github.com/wangfu91/oneocr-rs"
keywords = ["ocr", "windows", "oneocr"]
categories = ["api-bindings", "os::windows-apis"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "aarch64-pc-windows-msvc", "i686-pc-windows-msvc"]

[dependencies]
image = "0.25.6"
libloading = "0.8"
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
